--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
     <version>1.0-SNAPSHOT</version>
 
     <dependencies>
+        <dependency>
+            <groupId>fr.anthonyquere</groupId>
+            <artifactId>grocery-web</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
         <!-- CLI -->
         <dependency>
             <groupId>commons-cli</groupId>
@@ -41,6 +47,7 @@
             <version>5.14.2</version>
             <scope>test</scope>
         </dependency>
+
     </dependencies>
 
     <properties>
